syntax = "proto3";

package apiserver.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/bingo-project/bingo/pkg/proto/apiserver/v1/pb";

message LoginRequest {
  string account = 1;  // email or phone
  string password = 2;
}

message LoginReply {
  string access_token = 1;
  string refresh_token = 2;
  string token_type = 3;
  int64 expires_in = 4;
}

message UserInfoRequest {}

message UserInfoReply {
  string uid = 1;
  string username = 2;
  string nickname = 3;
  string email = 4;
  string phone = 5;
  string status = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}
